<resources>
    <string name="app_name">Nutrition App</string>
    <string name="backArrow"><![CDATA[<]]></string>
    <string name="forwardArrow"><![CDATA[>]]></string>
    <string name="backDoubleArrow"><![CDATA[<<]]></string>
    <string name="doubleForwardArrow"><![CDATA[>>]]></string>
    <string name="textConfirm">Confirm</string>
    <string name="textCancel">Cancel</string>
    <string name="searchHint">searchHint</string>
    <string name="toolbarStringGroupDetails">New Food Group</string>
    <string name="addSingleFood">Add..</string>
    <string name="placeholder">PLACEHOLDER PLACEHOLDER PLACEHOLDER</string>
    <string name="journalToolbarText">Journal</string>
    <string name="journalAddMeal">Add Meal</string>
    <string name="configurationTitle">Configuration</string>
    <string name="recommendationTitle">Analysis</string>
    <string name="customItems">Custom Foods</string>
    <string name="customItemCreate">Create Food</string>

    <string name="createFoodsButton">Custom Foods</string>
    <string name="createFoodsButtonLeftText">Create your own customized Foods.</string>

    <string name="analysisButtonTitle">Analysis</string>
    <string name="analysisButtonLeftTag">Analyse your intake and get recommendations.</string>

    <string name="configButtonTitle">Configuration</string>
    <string name="configButtonLeftTag">Weight, height and other settings.</string>

    <string name="foodJournalButtonTitle">Food Journal</string>
    <string name="foodJournalButtonLeftTag">Log foods to your journal or check your history.</string>

    <string name="mainActivityToolbarTitle">Home</string>

    <string name="age_in_years">Age in years</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="male_or_female">\'male\' or \'female\'</string>
    <string name="searchHintWeight">weight in kg:</string>
    <string name="weight_history">weight history</string>
    <string name="searchHintHeight">height in cm:</string>
    <string name="derived_metrics">Derived Metrics</string>
    <string name="bmi">BMI:</string>
    <string name="calories">Calories:</string>
    <string name="submitChangesButtonConfig">submit changes</string>
    <string name="languageSectionHeader">Deutsch</string>
    <string name="localization_de">Localization DE</string>
    <string name="export_data_button">Export Data</string>
    <string name="import_backup_button">Import Backup</string>

    <string name="today">today</string>
    <string name="daily_targets">daily targets</string>
    <string name="week_overview">week overview</string>
    <string name="weekly_targets">weekly targets</string>
    <string name="current_week">current week</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <string name="recommendationDesc">Recommended food for lack of </string>
    <string name="dailyRecommendation">Your daily needs are</string>
    <string name="popupEnergyText">Amount of Energy: </string>
    <string name="amountOf"> Amount of </string>
    <string name="recommendedFood"> Recommended Food: </string>
    <string name="amount"> Amount </string>

    <string name="sideMenuAboutSectionName">Other</string>
    <string name="about">About</string>

    <string name="date">Date:</string>
    <string name="submit">Submit:</string>

    <string name="otherLanguage">DE</string>

    <!-- Custom Foods -->
    <string name="customFoodHeader">Foods created so far:</string>
    <string name="customFoodHeaderEmpty">No Foods created so far!</string>

    <!-- Add Foods -->
    <string name="addFoodsSuggestionHeader">Suggestions</string>
    <string name="addFoodsNutritionOverviewHeader">Nutrition Overview</string>
    <string name="addFoodsGroupItemHeader">Group Items</string>

    <!-- Weight Tracking -->
    <string name="oneWeek">1 Week</string>
    <string name="oneMonth">1 Month</string>
    <string name="oneYear">1 Year</string>
    <string name="sixMonth">6 Month</string>

    <!-- NutritionElements -->
    <string name="IRON">Iron</string>
    <string name="MAGNESIUM">Magnesium</string>
    <string name="ZINC">Zinc</string>
    <string name="CALCIUM">Calcium</string>
    <string name="POTASSIUM">Potassium</string>
    <string name="SELENIUM">Selenium</string>
    <string name="FOLIC_ACID">Folic Acid</string>
    <string name="VITAMIN_A">Vitamin A</string>
    <string name="VITAMIN_C">Vitamin C</string>
    <string name="VITAMIN_B1">Vitamin B1</string>
    <string name="VITAMIN_B2">Vitamin B2</string>
    <string name="VITAMIN_B3">Vitamin B3</string>
    <string name="VITAMIN_B6">Vitamin B6</string>
    <string name="VITAMIN_B12">Vitamin B12</string>
    <string name="VITAMIN_D">Vitamin D</string>
    <string name="VITAMIN_E">Vitamin E</string>
    <string name="VITAMIN_K">Vitamin K</string>

    <!-- portion types -->
    <string name="SMALL">small</string>
    <string name="MEDIUM">medium</string>
    <string name="LARGE">large</string>
    <string name="GRAM">gram</string>

    <!-- Days of Week -->
    <string name="MONDAY">Monday</string>
    <string name="TUESDAY">Tuesday</string>
    <string name="WEDNESDAY">Wednesday</string>
    <string name="THURSDAY">Thursday</string>
    <string name="FRIDAY">Friday</string>
    <string name="SATURDAY">Saturday</string>
    <string name="SUNDAY">Sunday</string>
    <string name="TODAY">Today</string>

    <!-- Month of Year -->
    <string name="JANUARY">January</string>
    <string name="FEBRUARY">February</string>
    <string name="MARCH">March</string>
    <string name="APRIL">April</string>
    <string name="MAY">May</string>
    <string name="JUNE">June</string>
    <string name="JULY">July</string>
    <string name="AUGUST">August</string>
    <string name="SEPTEMBER">September</string>
    <string name="OCTOBER">October</string>
    <string name="NOVEMBER">November</string>
    <string name="DECEMBER">December</string>

    <!-- strings without translation -->
    <string name="microgram" translatable="false">µg</string>
    <string name="kiloCalories" translatable="false">kcal</string>
    <string name="kalPer100mg" translatable="false">kcal/100mg</string>
    <string name="microPer100mg" translatable="false">µg/100mg</string>
    <string name="kilogram" translatable="false">kg</string>
    <string name="MG" translatable="false">mg</string>
    <string name="MG_ATE" translatable="false">mg</string>
    <string name="UG" translatable="false">µg</string>
    <string name="CUP" translatable="false">cup</string>
    <string name="FLUID_OUNCE" translatable="false">fl oz</string>
    <string name="ML" translatable="false">ml</string>
    <string name="PACKET" translatable="false">pkt</string>
    <string name="TABLESPOON" translatable="false">tbsp</string>
    <string name="TEASPOON" translatable="false">tsp</string>
    <string name="SCOOP" translatable="false">scoop</string>
    <string name="showAnalysis">Show Analysis</string>
    <string name="energyBarFormatString">Energy %d/%d</string>
    <string name="chartLegendCarbs">carbs</string>
    <string name="chartLegendProtein">protein</string>
    <string name="chartLegendFat">fat</string>
    <string name="current">Current</string>
    <string name="target">Target</string>
    <string name="legal">Legal</string>
    <string name="save_as_template">Save As Template</string>
    <string name="appName" translatable="false">Nutrition App</string>
    <string name="percentSign" translatable="false">%</string>
    <string name="adding_new_weight">Adding new weight:</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="save">Save</string>
    <string name="weightTracking">Weight Tracking</string>
    <string name="night_mode_icon_description">Night Mode Icon</string>
    <string name="add_food_to_journal_button_description">Add food to journal</string>
    <string name="view_journal_button_description">View journal</string>
    <string name="back_arrow_description">back</string>
    <string name="toolbar_forward_button_description">toolbar forward</string>
    <string name="open_navbar_button_description">Open navbar</string>
    <string name="ConfigurationPersonalDataHeader">Personal Data</string>
    <string name="ConfigurationHeightTitle">Height in cm:</string>
    <string name="ConfigurationWeightTitle">Weight in kg:</string>
    <string name="ConfigurationCalculatedResultsHeader">Calculated Results</string>
    <string name="ConfigurationHealDataHeader">Health Data</string>
    <string name="ConfigurationCuratedFoodTitle">Curated Foods</string>
    <string name="DatabaseExportSuccessful">Database export successfully!</string>
    <string name="DatabaseExportCanceled">Database export canceled!</string>
    <string name="gram_unit_short">GRAM</string>
    <string name="approximate_sign">~</string>
    <string name="fiberInGramLabel">Fiber in gram</string>
    <string name="energyInKcalLabel">Energy in kcal</string>
    <string name="servingSizeInGramLabel">Serving Size in gram</string>
    <string name="generalFoodInformationHeader">General Food Information</string>
    <string name="labelFoodName">Name</string>
    <string name="createFoodHeaderNutrients">Nutrients</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
