<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    TOOLBAR-->
    <include
        android:id="@+id/toolbar"
        layout="@layout/app_toolbar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dateGuidlineW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/chartGuidlineW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barchartWeekW"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/textviewDateW"
        app:layout_constraintBottom_toTopOf="@id/chartGuidlineW"
        />

    <!-- guidline veritcal since we use scalable strings in textview -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vGuidline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vGuidline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"/>

    <TextView
        android:id="@+id/textviewDateW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/target_overview_dateText"
        app:layout_constraintStart_toEndOf="@id/vGuidline1"
        app:layout_constraintEnd_toStartOf="@+id/vGuidline2"
        app:layout_constraintTop_toTopOf="@id/dateGuidlineW"
        android:layout_marginTop="5dp"
        />


    <Button
        android:id="@+id/dateBackButtonWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/backDoubleArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dateGuidlineW" />

    <Button
        android:id="@+id/dateBackButton"
        android:text="@string/backArrow"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/dateBackButtonWeek"
        app:layout_constraintStart_toEndOf="@id/dateBackButtonWeek"
        app:layout_constraintEnd_toStartOf="@id/vGuidline1"
        />

    <Button
        android:id="@+id/dateForewardButton"
        android:text="@string/forwardArrow"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/dateBackButtonWeek"
        app:layout_constraintStart_toEndOf="@id/vGuidline2"
        app:layout_constraintEnd_toStartOf="@id/dateForewardButtonWeek" />

    <Button
        android:id="@+id/dateForewardButtonWeek"
        android:text="@string/doubleForwardArrow"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/dateBackButtonWeek"

        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>